--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "jsdom": "^22.1.0",
     "node-fetch": "^2.6.1",
     "ssl-root-cas": "^1.3.1"
   }
