--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "jsdom": "^22.1.0",
-    "node-fetch": "^2.6.1",
-    "ssl-root-cas": "^1.3.1"
+    "node-fetch": "^2.6.1"
   }
 }
